feat(CAT-FR-GD-01): resolve some IDE warnings